Made page not jump when clicking "contact me" in about form, fixed width of contact "submit" button

--- a/css/contact.css
+++ b/css/contact.css
@@ -71,6 +71,9 @@
 #contact-form label {
   display:block;
 }
+#contact-form #submit {
+  width: 100px;
+}
 #contact-form #submit.error {
   color: white;
   background-color: red;
